<?xml version="1.0" encoding="utf-8"?>
<layout >
    <data>
        <variable
            name="userViewModel"
            type="com.dvara.edairy.UserViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_user_details"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:id="@+id/tv_title"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:layout_marginTop="20dp"
        android:inputType="phone"
        android:maxLength="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/et_mobile_number"
        android:maxLines="1"
        android:gravity="center"
        android:autofillHints="@string/enter_mobile_number"
        android:hint="@string/enter_mobile_number"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="10dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:id="@+id/bt_submit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_mobile_number"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"
        android:id="@+id/mcview"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/bt_submit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_name"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_mobile_number"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/photo"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="20dp"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:id="@+id/iv_photo"
                    android:layout_marginBottom="20dp"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>